# serializer version: 1
# name: test_billing_export[Municipality-billing_params0-3-3-False-parcels0]
  list([
    '06.11.2023',
    'run',
    'Calvin Graham',
    'Michelle Johnson',
    '170.22 exklusive  7.7% MwSt',
    '170.22',
    '',
    '',
    '',
    'Keine Koordinaten verfügbar',
    'Alex Smith',
  ])
# ---
# name: test_billing_export[Municipality-billing_params0-3-3-False-parcels1]
  list([
    '06.11.2023',
    'run',
    'Calvin Graham',
    'Michelle Johnson',
    '170.22 exklusive  7.7% MwSt',
    '170.22',
    '',
    '',
    '134',
    '2222/3333',
    'Alex Smith',
  ])
# ---
# name: test_billing_export[Municipality-billing_params0-3-3-False-parcels2]
  list([
    '06.11.2023',
    'run',
    'Calvin Graham',
    'Michelle Johnson',
    '170.22 exklusive  7.7% MwSt',
    '170.22',
    '',
    '',
    '231, 232, 233',
    '1111/2222, 4444/5555, 6666/7777',
    'Alex Smith',
  ])
# ---
# name: test_billing_export[Municipality-billing_params1-3-3-False-parcels0]
  list([
    '06.11.2023',
    'run',
    'Nicholas Johnson',
    'Raymond Olson',
    '61.18 von 158.05 exklusive  7.7% MwSt',
    '104.14',
    '',
    '',
    '',
    'Keine Koordinaten verfügbar',
    'Alex Smith',
  ])
# ---
# name: test_billing_export[Municipality-billing_params1-3-3-False-parcels1]
  list([
    '06.11.2023',
    'run',
    'Nicholas Johnson',
    'Raymond Olson',
    '61.18 von 158.05 exklusive  7.7% MwSt',
    '104.14',
    '',
    '',
    '134',
    '2222/3333',
    'Alex Smith',
  ])
# ---
# name: test_billing_export[Municipality-billing_params1-3-3-False-parcels2]
  list([
    '06.11.2023',
    'run',
    'Nicholas Johnson',
    'Raymond Olson',
    '61.18 von 158.05 exklusive  7.7% MwSt',
    '104.14',
    '',
    '',
    '231, 232, 233',
    '1111/2222, 4444/5555, 6666/7777',
    'Alex Smith',
  ])
# ---
# name: test_billing_export[Municipality-billing_params2-3-3-False-parcels0]
  list([
    '06.11.2023',
    'run',
    'Karen Martinez',
    'Luis Hardin',
    '1.00 Std à 151.00 inklusive  7.7% MwSt',
    '151.00',
    '',
    '',
    '',
    'Keine Koordinaten verfügbar',
    'Alex Smith',
  ])
# ---
# name: test_billing_export[Municipality-billing_params2-3-3-False-parcels1]
  list([
    '06.11.2023',
    'run',
    'Karen Martinez',
    'Luis Hardin',
    '1.00 Std à 151.00 inklusive  7.7% MwSt',
    '151.00',
    '',
    '',
    '134',
    '2222/3333',
    'Alex Smith',
  ])
# ---
# name: test_billing_export[Municipality-billing_params2-3-3-False-parcels2]
  list([
    '06.11.2023',
    'run',
    'Karen Martinez',
    'Luis Hardin',
    '1.00 Std à 151.00 inklusive  7.7% MwSt',
    '151.00',
    '',
    '',
    '231, 232, 233',
    '1111/2222, 4444/5555, 6666/7777',
    'Alex Smith',
  ])
# ---
# name: test_billing_export[Municipality-billing_params3-3-3-False-parcels0]
  list([
    '06.11.2023',
    'run',
    'Calvin Graham',
    'Michelle Johnson',
    '158.05 nicht MwSt-pflichtig',
    '158.05',
    '',
    '',
    '',
    'Keine Koordinaten verfügbar',
    'Alex Smith',
  ])
# ---
# name: test_billing_export[Municipality-billing_params3-3-3-False-parcels1]
  list([
    '06.11.2023',
    'run',
    'Calvin Graham',
    'Michelle Johnson',
    '158.05 nicht MwSt-pflichtig',
    '158.05',
    '',
    '',
    '134',
    '2222/3333',
    'Alex Smith',
  ])
# ---
# name: test_billing_export[Municipality-billing_params3-3-3-False-parcels2]
  list([
    '06.11.2023',
    'run',
    'Calvin Graham',
    'Michelle Johnson',
    '158.05 nicht MwSt-pflichtig',
    '158.05',
    '',
    '',
    '231, 232, 233',
    '1111/2222, 4444/5555, 6666/7777',
    'Alex Smith',
  ])
# ---
# name: test_billing_export[Service-billing_params6-3-3-False-parcels0]
  list([
    '06.11.2023',
    'run',
    'Calvin Graham',
    'Michelle Johnson',
    '170.22 exklusive  7.7% MwSt',
    '170.22',
    '',
    '',
    '',
    'Keine Koordinaten verfügbar',
    'Alex Smith',
  ])
# ---
# name: test_billing_export[Service-billing_params6-3-3-False-parcels1]
  list([
    '06.11.2023',
    'run',
    'Calvin Graham',
    'Michelle Johnson',
    '170.22 exklusive  7.7% MwSt',
    '170.22',
    '',
    '',
    '134',
    '2222/3333',
    'Alex Smith',
  ])
# ---
# name: test_billing_export[Service-billing_params6-3-3-False-parcels2]
  list([
    '06.11.2023',
    'run',
    'Calvin Graham',
    'Michelle Johnson',
    '170.22 exklusive  7.7% MwSt',
    '170.22',
    '',
    '',
    '231, 232, 233',
    '1111/2222, 4444/5555, 6666/7777',
    'Alex Smith',
  ])
# ---
# name: test_billing_export[Service-billing_params7-3-1-True-parcels0]
  list([
    '06.12.2023',
    'run',
    'Calvin Graham',
    'Michelle Johnson',
    '170.22 exklusive  7.7% MwSt',
    '170.22',
    '',
    '',
    '',
    'Keine Koordinaten verfügbar',
    'Alex Smith',
  ])
# ---
# name: test_billing_export[Service-billing_params7-3-1-True-parcels1]
  list([
    '06.12.2023',
    'run',
    'Calvin Graham',
    'Michelle Johnson',
    '170.22 exklusive  7.7% MwSt',
    '170.22',
    '',
    '',
    '134',
    '2222/3333',
    'Alex Smith',
  ])
# ---
# name: test_billing_export[Service-billing_params7-3-1-True-parcels2]
  list([
    '06.12.2023',
    'run',
    'Calvin Graham',
    'Michelle Johnson',
    '170.22 exklusive  7.7% MwSt',
    '170.22',
    '',
    '',
    '231, 232, 233',
    '1111/2222, 4444/5555, 6666/7777',
    'Alex Smith',
  ])
# ---
# name: test_billing_export[Support-billing_params5-3-3-False-parcels0]
  list([
    '06.11.2023',
    'run',
    'Calvin Graham',
    'Michelle Johnson',
    '170.22 exklusive  7.7% MwSt',
    '170.22',
    '',
    '',
    '',
    'Keine Koordinaten verfügbar',
    'Alex Smith',
  ])
# ---
# name: test_billing_export[Support-billing_params5-3-3-False-parcels1]
  list([
    '06.11.2023',
    'run',
    'Calvin Graham',
    'Michelle Johnson',
    '170.22 exklusive  7.7% MwSt',
    '170.22',
    '',
    '',
    '134',
    '2222/3333',
    'Alex Smith',
  ])
# ---
# name: test_billing_export[Support-billing_params5-3-3-False-parcels2]
  list([
    '06.11.2023',
    'run',
    'Calvin Graham',
    'Michelle Johnson',
    '170.22 exklusive  7.7% MwSt',
    '170.22',
    '',
    '',
    '231, 232, 233',
    '1111/2222, 4444/5555, 6666/7777',
    'Alex Smith',
  ])
# ---
